native_math/frb_generated.h

// EXTRA BEGIN
typedef struct DartCObject *WireSyncRust2DartDco;
typedef struct wire_cst_list_prim_f_64_loose {
  double *ptr;
  int32_t len;
} wire_cst_list_prim_f_64_loose;
typedef struct wire_cst_list_prim_u_8_strict {
  uint8_t *ptr;
  int32_t len;
} wire_cst_list_prim_u_8_strict;
typedef struct wire_cst_record_string_f_64 {
  struct wire_cst_list_prim_u_8_strict *field0;
  double field1;
} wire_cst_record_string_f_64;
typedef struct wire_cst_list_record_string_f_64 {
  struct wire_cst_record_string_f_64 *ptr;
  int32_t len;
} wire_cst_list_record_string_f_64;
WireSyncRust2DartDco frbgen_kivixa_wire__crate__api__mod_add(uint64_t a, uint64_t b, uint64_t m);
WireSyncRust2DartDco frbgen_kivixa_wire__crate__api__mod_divide(uint64_t a, uint64_t b, uint64_t m);
WireSyncRust2DartDco frbgen_kivixa_wire__crate__api__mod_inverse(uint64_t a, uint64_t m);
WireSyncRust2DartDco frbgen_kivixa_wire__crate__api__mod_multiply(uint64_t a,
                                                                  uint64_t b,
                                                                  uint64_t m);
WireSyncRust2DartDco frbgen_kivixa_wire__crate__api__mod_pow(uint64_t base,
                                                             uint64_t exp,
                                                             uint64_t modulus);
WireSyncRust2DartDco frbgen_kivixa_wire__crate__api__mod_sub(uint64_t a, uint64_t b, uint64_t m);
WireSyncRust2DartDco frbgen_kivixa_wire__crate__api__parse_formula(struct wire_cst_list_prim_u_8_strict *formula);
void frbgen_kivixa_wire__crate__api__partial_derivative(int64_t port_,
                                                        struct wire_cst_list_prim_u_8_strict *expression,
                                                        struct wire_cst_list_prim_u_8_strict *variable,
                                                        struct wire_cst_list_record_string_f_64 *point,
                                                        uint32_t order);
WireSyncRust2DartDco frbgen_kivixa_wire__crate__api__permutations(uint64_t n, uint64_t r);
void frbgen_kivixa_wire__crate__api__polynomial_regression(int64_t port_,
                                                           struct wire_cst_list_prim_f_64_loose *x_data,
                                                           struct wire_cst_list_prim_f_64_loose *y_data,
                                                           uintptr_t degree);
WireSyncRust2DartDco frbgen_kivixa_wire__crate__api__prime_factors(uint64_t n);
void frbgen_kivixa_wire__crate__api__sieve_primes(int64_t port_, uint64_t n);
void frbgen_kivixa_wire__crate__api__solve_equation(int64_t port_,
                                                    struct wire_cst_list_prim_u_8_strict *expression,
                                                    struct wire_cst_list_prim_u_8_strict *variable,
                                                    double initial_guess,
                                                    double tolerance,
                                                    uint32_t max_iterations);
void frbgen_kivixa_wire__crate__api__t_test(int64_t port_,
                                            struct wire_cst_list_prim_f_64_loose *data,
                                            double hypothesized_mean,
                                            double alpha);
void frbgen_kivixa_wire__crate__api__taylor_coefficients(int64_t port_,
                                                         struct wire_cst_list_prim_u_8_strict *expression,
                                                         struct wire_cst_list_prim_u_8_strict *variable,
                                                         double around,
                                                         uint32_t num_terms);