lib/src/rust_math/frb_generated.io.dart


  late final _wire__crate__api__mod_addPtr =
      _lookup<
        ffi.NativeFunction<
          WireSyncRust2DartDco Function(ffi.Uint64, ffi.Uint64, ffi.Uint64)
        >
      >('frbgen_kivixa_wire__crate__api__mod_add');
  late final _wire__crate__api__mod_add = _wire__crate__api__mod_addPtr
      .asFunction<WireSyncRust2DartDco Function(int, int, int)>();

  WireSyncRust2DartDco wire__crate__api__mod_divide(int a, int b, int m) {
    return _wire__crate__api__mod_divide(a, b, m);
  }

  late final _wire__crate__api__mod_dividePtr =
      _lookup<
        ffi.NativeFunction<
          WireSyncRust2DartDco Function(ffi.Uint64, ffi.Uint64, ffi.Uint64)
        >
      >('frbgen_kivixa_wire__crate__api__mod_divide');
  late final _wire__crate__api__mod_divide = _wire__crate__api__mod_dividePtr
      .asFunction<WireSyncRust2DartDco Function(int, int, int)>();

  WireSyncRust2DartDco wire__crate__api__mod_inverse(int a, int m) {
    return _wire__crate__api__mod_inverse(a, m);
  }

  late final _wire__crate__api__mod_inversePtr =
      _lookup<
        ffi.NativeFunction<
          WireSyncRust2DartDco Function(ffi.Uint64, ffi.Uint64)
        >
      >('frbgen_kivixa_wire__crate__api__mod_inverse');
  late final _wire__crate__api__mod_inverse = _wire__crate__api__mod_inversePtr
      .asFunction<WireSyncRust2DartDco Function(int, int)>();

  WireSyncRust2DartDco wire__crate__api__mod_multiply(int a, int b, int m) {
    return _wire__crate__api__mod_multiply(a, b, m);
  }

  late final _wire__crate__api__mod_multiplyPtr =
      _lookup<
        ffi.NativeFunction<
          WireSyncRust2DartDco Function(ffi.Uint64, ffi.Uint64, ffi.Uint64)
        >
      >('frbgen_kivixa_wire__crate__api__mod_multiply');
  late final _wire__crate__api__mod_multiply =
      _wire__crate__api__mod_multiplyPtr
          .asFunction<WireSyncRust2DartDco Function(int, int, int)>();

  WireSyncRust2DartDco wire__crate__api__mod_pow(
    int base,
    int exp,
    int modulus,
  ) {
    return _wire__crate__api__mod_pow(base, exp, modulus);
  }

  late final _wire__crate__api__mod_powPtr =
      _lookup<
        ffi.NativeFunction<
          WireSyncRust2DartDco Function(ffi.Uint64, ffi.Uint64, ffi.Uint64)
        >
      >('frbgen_kivixa_wire__crate__api__mod_pow');
  late final _wire__crate__api__mod_pow = _wire__crate__api__mod_powPtr
      .asFunction<WireSyncRust2DartDco Function(int, int, int)>();

  WireSyncRust2DartDco wire__crate__api__mod_sub(int a, int b, int m) {
    return _wire__crate__api__mod_sub(a, b, m);
  }

  late final _wire__crate__api__mod_subPtr =
      _lookup<
        ffi.NativeFunction<
          WireSyncRust2DartDco Function(ffi.Uint64, ffi.Uint64, ffi.Uint64)
        >
      >('frbgen_kivixa_wire__crate__api__mod_sub');
  late final _wire__crate__api__mod_sub = _wire__crate__api__mod_subPtr
      .asFunction<WireSyncRust2DartDco Function(int, int, int)>();

  WireSyncRust2DartDco wire__crate__api__parse_formula(
    ffi.Pointer<wire_cst_list_prim_u_8_strict> formula,
  ) {
    return _wire__crate__api__parse_formula(formula);
  }

  late final _wire__crate__api__parse_formulaPtr =
      _lookup<
        ffi.NativeFunction<
          WireSyncRust2DartDco Function(
            ffi.Pointer<wire_cst_list_prim_u_8_strict>,
          )
        >
      >('frbgen_kivixa_wire__crate__api__parse_formula');
  late final _wire__crate__api__parse_formula =
      _wire__crate__api__parse_formulaPtr
          .asFunction<
            WireSyncRust2DartDco Function(
              ffi.Pointer<wire_cst_list_prim_u_8_strict>,
            )
          >();

  void wire__crate__api__partial_derivative(
    int port_,
    ffi.Pointer<wire_cst_list_prim_u_8_strict> expression,
    ffi.Pointer<wire_cst_list_prim_u_8_strict> variable,
    ffi.Pointer<wire_cst_list_record_string_f_64> point,
    int order,
  ) {
    return _wire__crate__api__partial_derivative(
      port_,
      expression,
      variable,
      point,
      order,
    );
  }

  late final _wire__crate__api__partial_derivativePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(
            ffi.Int64,
            ffi.Pointer<wire_cst_list_prim_u_8_strict>,
            ffi.Pointer<wire_cst_list_prim_u_8_strict>,
            ffi.Pointer<wire_cst_list_record_string_f_64>,
            ffi.Uint32,
          )
        >
      >('frbgen_kivixa_wire__crate__api__partial_derivative');
  late final _wire__crate__api__partial_derivative =
      _wire__crate__api__partial_derivativePtr
          .asFunction<
            void Function(
              int,
              ffi.Pointer<wire_cst_list_prim_u_8_strict>,
              ffi.Pointer<wire_cst_list_prim_u_8_strict>,
              ffi.Pointer<wire_cst_list_record_string_f_64>,
              int,
            )
          >();

  WireSyncRust2DartDco wire__crate__api__permutations(int n, int r) {
    return _wire__crate__api__permutations(n, r);
  }

  late final _wire__crate__api__permutationsPtr =
      _lookup<
        ffi.NativeFunction<
          WireSyncRust2DartDco Function(ffi.Uint64, ffi.Uint64)
        >
      >('frbgen_kivixa_wire__crate__api__permutations');
  late final _wire__crate__api__permutations =
      _wire__crate__api__permutationsPtr
          .asFunction<WireSyncRust2DartDco Function(int, int)>();

  void wire__crate__api__polynomial_regression(
    int port_,
    ffi.Pointer<wire_cst_list_prim_f_64_loose> x_data,
    ffi.Pointer<wire_cst_list_prim_f_64_loose> y_data,
    int degree,
  ) {
    return _wire__crate__api__polynomial_regression(
      port_,
      x_data,
      y_data,
      degree,
    );
  }

  late final _wire__crate__api__polynomial_regressionPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(
            ffi.Int64,
            ffi.Pointer<wire_cst_list_prim_f_64_loose>,
            ffi.Pointer<wire_cst_list_prim_f_64_loose>,
            ffi.UintPtr,
          )
        >
      >('frbgen_kivixa_wire__crate__api__polynomial_regression');
  late final _wire__crate__api__polynomial_regression =
      _wire__crate__api__polynomial_regressionPtr
          .asFunction<
            void Function(
              int,
              ffi.Pointer<wire_cst_list_prim_f_64_loose>,
              ffi.Pointer<wire_cst_list_prim_f_64_loose>,
              int,
            )
          >();

  WireSyncRust2DartDco wire__crate__api__prime_factors(int n) {
    return _wire__crate__api__prime_factors(n);
  }

  late final _wire__crate__api__prime_factorsPtr =
      _lookup<ffi.NativeFunction<WireSyncRust2DartDco Function(ffi.Uint64)>>(
        'frbgen_kivixa_wire__crate__api__prime_factors',
      );
  late final _wire__crate__api__prime_factors =
      _wire__crate__api__prime_factorsPtr
          .asFunction<WireSyncRust2DartDco Function(int)>();

  void wire__crate__api__sieve_primes(int port_, int n) {
    return _wire__crate__api__sieve_primes(port_, n);
  }

  late final _wire__crate__api__sieve_primesPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64, ffi.Uint64)>>(
        'frbgen_kivixa_wire__crate__api__sieve_primes',
      );
  late final _wire__crate__api__sieve_primes =
      _wire__crate__api__sieve_primesPtr.asFunction<void Function(int, int)>();

  void wire__crate__api__solve_equation(
    int port_,
    ffi.Pointer<wire_cst_list_prim_u_8_strict> expression,
    ffi.Pointer<wire_cst_list_prim_u_8_strict> variable,
    double initial_guess,
    double tolerance,
    int max_iterations,
  ) {
    return _wire__crate__api__solve_equation(
      port_,
      expression,
      variable,
      initial_guess,
      tolerance,
      max_iterations,
    );
  }

  late final _wire__crate__api__solve_equationPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(
            ffi.Int64,
            ffi.Pointer<wire_cst_list_prim_u_8_strict>,
            ffi.Pointer<wire_cst_list_prim_u_8_strict>,
            ffi.Double,
            ffi.Double,
            ffi.Uint32,
          )
        >
      >('frbgen_kivixa_wire__crate__api__solve_equation');
  late final _wire__crate__api__solve_equation =
      _wire__crate__api__solve_equationPtr
          .asFunction<
            void Function(
              int,
              ffi.Pointer<wire_cst_list_prim_u_8_strict>,
              ffi.Pointer<wire_cst_list_prim_u_8_strict>,
              double,
              double,
              int,
            )
          >();

  void wire__crate__api__t_test(
    int port_,
    ffi.Pointer<wire_cst_list_prim_f_64_loose> data,
    double hypothesized_mean,
    double alpha,
  ) {
    return _wire__crate__api__t_test(port_, data, hypothesized_mean, alpha);
  }

  late final _wire__crate__api__t_testPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(
            ffi.Int64,
            ffi.Pointer<wire_cst_list_prim_f_64_loose>,
            ffi.Double,
            ffi.Double,
          )
        >
      >('frbgen_kivixa_wire__crate__api__t_test');
  late final _wire__crate__api__t_test = _wire__crate__api__t_testPtr
      .asFunction<
        void Function(
          int,
          ffi.Pointer<wire_cst_list_prim_f_64_loose>,
          double,
          double,
        )
      >();

  void wire__crate__api__taylor_coefficients(
    int port_,
    ffi.Pointer<wire_cst_list_prim_u_8_strict> expression,
    ffi.Pointer<wire_cst_list_prim_u_8_strict> variable,
    double around,
    int num_terms,
  ) {
    return _wire__crate__api__taylor_coefficients(
      port_,
      expression,
      variable,
      around,
      num_terms,
    );
  }

  late final _wire__crate__api__taylor_coefficientsPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(
            ffi.Int64,
            ffi.Pointer<wire_cst_list_prim_u_8_strict>,
            ffi.Pointer<wire_cst_list_prim_u_8_strict>,
            ffi.Double,
            ffi.Uint32,
          )
        >
      >('frbgen_kivixa_wire__crate__api__taylor_coefficients');
  late final _wire__crate__api__taylor_coefficients =
      _wire__crate__api__taylor_coefficientsPtr
          .asFunction<
            void Function(
              int,
              ffi.Pointer<wire_cst_list_prim_u_8_strict>,
              ffi.Pointer<wire_cst_list_prim_u_8_strict>,
              double,
              int,
            )
          >();

  void wire__crate__api__triple_integral(
    int port_,
    ffi.Pointer<wire_cst_list_prim_u_8_strict> expression,
    ffi.Pointer<wire_cst_list_prim_u_8_strict> x_var,
    ffi.Pointer<wire_cst_list_prim_u_8_strict> y_var,
    ffi.Pointer<wire_cst_list_prim_u_8_strict> z_var,
    double x_min,
    double x_max,
    double y_min,
    double y_max,
    double z_min,
    double z_max,
    int num_intervals,
  ) {
    return _wire__crate__api__triple_integral(
      port_,
      expression,
      x_var,
      y_var,
      z_var,
      x_min,
      x_max,
      y_min,
      y_max,
      z_min,
      z_max,
      num_intervals,
    );
  }
